--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <title>e busquei</title>
-  <link rel="stylesheet" href="public/css/senha.css" />
+  <link rel="stylesheet" href="/css/senha.css" />
 </head>
 <body>
 
